assets/css/main.css
.container {
  width: 100vw;
  overflow: hidden;
}

.sc-main {
  position: relative;
  width: 100vw;
  height: 127vh;
  /* height: 1152px; */
  /* height: calc(100vw * 0.6); */
  max-width: 100%;
  min-height: 720px;
  color: #fdf8f1;
  background-image: radial-gradient(
    circle at center,
    rgba(190, 190, 190, 1) 0%,
    rgba(106, 105, 105, 1) 100%
  );
}
.sc-main::before {
  display: block;
  content: "";
  width: 956px;
  height: 956px;
  margin: 0 auto;
  filter: blur(50px);
  border-radius: 3000px;
  background-image: radial-gradient(
    circle at center,
    rgba(231, 231, 231, 1) 0%,
    rgba(231, 231, 231, 0) 100%
  );
}
.sc-main .award-list {
  display: flex;
  position: absolute;
  justify-content: space-between;
  width: 26%;
  top: 14%;
  left: 3%;
  gap: 10px;
}
.sc-main .award-list li {
  width: 100%;
}
.sc-main .award-list li a {
  display: block;
  width: 100%;
  min-width: 73px;
  background: no-repeat center / cover;
  cursor: pointer;
}
.sc-main .award-list li a::before {
  display: block;
  content: "";
  padding-top: 100%;
}
.sc-main .award-list .award-item1 a {
  background-image: url("../imgs/award1.png");
}
.sc-main .award-list .award-item2 a {
  background-image: url("../imgs/award2.png");
}
.sc-main .award-list .award-item3 a {
  background-image: url("../imgs/award3.png");
}
.sc-main .award-list .award-item4 a {
  background-image: url("../imgs/award4.png");
}
.sc-main .text-wrapper {
  display: flex;
  flex-direction: column;
  position: absolute;
  width: 19%;
  left: 3%;
  bottom: 24%;
  font-weight: 300;
  text-transform: uppercase;
}
.sc-main .text-wrapper p:first-child {
  font-size: 1.3vw;
  padding-bottom: 3%;
}
.sc-main .text-wrapper p:nth-child(2) {
  font-size: 0.8vw;
  padding-bottom: 12%;
}
.sc-main .anchor-link {
  display: block;
  position: relative;
  width: 89%;
  padding-top: 22%;
  background: url("../imgs/start1.png") no-repeat center / cover;
  transition: all 0.3s ease-in-out;
}
.sc-main .anchor-link:hover {
  background: url("../imgs/start2.png") no-repeat center / cover;
}
.sc-main .anchor-link span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 1.3vw;
}
.sc-main .center-section {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  position: absolute;
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
  pointer-events: none;
}
.sc-main .center-section .atom {
  position: absolute;
  width: 84%;
  /* width: 1005px; */
  top: 8%;
  /* z-index: 1; */
}
.sc-main .right-section .site-of-the-day {
  position: absolute;
  top: 14%;
  right: 0;
  width: 4%;
  padding-top: 8%;
  background: url("../imgs/siteoftheday.png") no-repeat center / cover;
}
.sc-main .right-section .honors {
  position: absolute;
  top: 37%;
  right: 0;
  zoom: var(--zoom);
}
.sc-main .right-section .description {
  position: absolute;
  bottom: 24%;
  right: 5%;
  font-weight: 300;
  text-transform: uppercase;
}
.sc-main .bottom-section strong {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
  font-size: 10vw;
  font-weight: 300;
  letter-spacing: -4px;
}
.sc-main .bottom-section strong span {
  color: rgb(255, 202, 32);
}

.sc-beginning {
  position: relative;
  width: 100vw;
  /* height: 2302px; */
  /* height: calc(100vw * 1.199); */
  height: 120vh;
  max-width: 100%;
  background-color: #ffca20;
  /* overflow: hidden; */
  z-index: -1;
}
/* 공통 label */
.label {
  position: absolute;
  color: #ffca20;
  font-size: 1.3vw;
  line-height: 1.3;
  font-weight: 400;
}
/* 공통 title */
.sub-title,
.title {
  position: absolute;
  color: #fdf8f1;
  font-size: 2.5vw;
  line-height: 1.26;
  font-weight: 300;
  letter-spacing: -0.4px;
  text-transform: uppercase;
}
/* 공통 description */
.description {
  position: absolute;
  font-size: 1.3vw;
  line-height: 1.3;
  font-weight: 400;
  color: #fdf8f1;
}
.sc-beginning .label {
  top: 15%;
  left: 3%;
  width: 158px;
  color: #193261;
}
.sc-beginning .title {
  top: 15%;
  left: 20%;
  color: #193261;
}
.sc-beginning .description {
  top: 34%;
  left: 42%;
  color: #193261;
}
@keyframes satelliteAnimation {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(-96px);
  }
  100% {
    transform: translateY(0);
  }
}
@keyframes spaceshipAnimation {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(65px);
  }
  100% {
    transform: translateY(0);
  }
}
.sc-beginning .img-wrapper img {
  position: absolute;
  zoom: var(--zoom);
}
.sc-beginning .satellite {
  left: -43px;
  top: 246px;
  width: 206px;
  animation: satelliteAnimation 25s linear infinite;
}
.sc-beginning .spaceship {
  left: 891px;
  top: -64px;
  width: 471px;
  animation: spaceshipAnimation 20s linear infinite;
}
.sc-beginning .alien1 {
  left: -156px;
  top: 511px;
  width: 152px;
  z-index: 1;
}
.sc-beginning .alien2 {
  right: -117px;
  top: 510px;
  width: 152px;
  z-index: 1;
}
.sc-beginning .block-bottom {
  width: 130%;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
  max-width: none;
}

/* blue-bg-group
sc-since: 135vh,
sc-creator: 245vh
sc-first-sets: 150vh
 */
.sc-since {
  position: relative;
  width: 100vw;
  height: 135vh;
}
.sc-since::before {
  position: absolute;
  width: 100vw;
  height: 530vh;
  top: 0;
  left: 0;
  content: "";
  background-color: #0e1730;
}
.sc-since::after {
  position: absolute;
  top: 0;
  left: 0;
  content: "";
  width: 100vw;
  height: 530vh;
  background: url("../imgs/space-bg3.png") repeat-y center / cover;
}
.sc-since .content-area > * {
  position: absolute;
  font-weight: 300;
  letter-spacing: -0.4px;
  text-transform: uppercase;
  z-index: 1;
}
.sc-since .content-area #year-1978 {
  top: 25%;
  left: 3%;
  color: #ffca20;
  font-size: 8.8vw;
}
.sc-since .content-area .title {
  top: 45%;
  left: 20%;
}
.sc-since .img-wrapper img {
  position: absolute;
  zoom: var(--zoom);
}
/* ... */

